# monte-carlo-enginer

./: .gitignore  CMakeLists.txt  README.md
examples/: asian_vs_european.cpp  basic_pricing.cpp  control_variates_demo.cpp  convergence_study.cpp  greeks_comparison.cpp  performance_benchmark.cpp  validation.cpp
include/mc_engine/core/: random.hpp  statistics.hpp  types.hpp
include/mc_engine/models/: black_scholes.hpp  gbm.hpp
include/mc_engine/payoffs/: asian.hpp  european.hpp  payoff.hpp
include/mc_engine/performance/: benchmark.hpp  simd.hpp  threading.hpp
include/mc_engine/pricing/: greeks.hpp  monte_carlo.hpp  variance_reduction.hpp
scripts/: plot_results.py
